Add infrastructure for front end Elm app

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,8 @@
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+
+# elm-package generated files
+elm-stuff
+# elm-repl generated files
+repl-temp-*
